tests/ecc-aws-334-vpc_unused_network_acl/placebo-green/ec2.DescribeNetworkAcls_1.json
{
    "status_code": 200,
    "data": {
        "NetworkAcls": [
            {
                "Associations": [
                    {
                        "NetworkAclAssociationId": "aclassoc-0dd399e58bf9da66c",
                        "NetworkAclId": "acl-001e2831dba9dbd35",
                        "SubnetId": "subnet-05540e2f32a1b8ff8"
                    }
                ],
                "Entries": [
                    {
                        "CidrBlock": "0.0.0.0/0",
                        "Egress": true,
                        "Protocol": "-1",
                        "RuleAction": "deny",
                        "RuleNumber": 32767
                    },
                    {
                        "CidrBlock": "0.0.0.0/0",
                        "Egress": false,
                        "Protocol": "-1",
                        "RuleAction": "deny",
                        "RuleNumber": 32767
                    }
                ],
                "IsDefault": false,
                "NetworkAclId": "acl-001e2831dba9dbd35",
                "Tags": [
                    {
                        "Key": "ComplianceStatus",
                        "Value": "Green"
                    },
                    {
                        "Key": "CustodianRule",
                        "Value": "ecc-aws-334-vpc_unused_network_acl"
                    }
                ],
                "VpcId": "vpc-12345asdfg",
                "OwnerId": "this"
            }
        ],
        "ResponseMetadata": {}
    }
}
